# brainace

./: .env  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  mathematical_constants.ron  research_resources.txt
core/: Cargo.toml
core/.helix/: languages.toml
core/src/: auth.rs  lib.rs  utils.rs
db/: Brainace.db-shm  Brainace.db-wal
db/migrations/: 20240128033716_create_database.sql
desktop/: Cargo.toml
desktop/src/: components.rs  lib.rs  main.rs  reviewing.rs
desktop/src/components/: card.rs  deck.rs
desktop/src/theme/: palette.rs
desktop/src/widget/: modal.rs
migrations/: 20240128033716_create_database.sql
src/: lib.rs  reviewing.rs  theme.rs  widget.rs
src/widget/: modal.rs
web/: Cargo.toml  Dioxus.toml  flake.nix  tailwind.config.js
web/.helix/: languages.toml
web/public/: tailwind.css
web/src/: app.rs  auth.rs  dashboard.rs  error_template.rs  fallback.rs  garden.rs  lib.rs  main.rs  review.rs  ui.rs  users.rs
web/src/garden/: branch.rs  leaf.rs  stem.rs  tree.rs
web/style/: tailwind.css
