[workspace]
default-members = ["web"]
members = [
  "core",
  "desktop",
  "web"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
sqlx = "0.7"
axum = "0.7"
axum_session = "0.12"
axum_session_auth = "0.12"
async-trait = "0.1"
cfg-if = "1.0.0"

[patch.crates-io]
leptos_icons = { git = "https://github.com/DaraJKong/leptos-icons.git" }

[patch."https://github.com/open-spaced-repetition/rs-fsrs"]
fsrs = { git = "https://github.com/DaraJKong/rs-fsrs.git" }

# [patch."https://github.com/leptos-rs/leptos"]
# leptos = { path = "../leptos/leptos" }
# leptos_meta = { path = "../leptos/meta" }
# leptos_router = { path = "../leptos/router" }
# leptos_axum = { path = "../leptos/integrations/axum" }
