[package]
name = "brainace_core"
description = "The essential ideas of Brainace"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow.workspace = true
fsrs = { git = "https://github.com/open-spaced-repetition/rs-fsrs.git", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { workspace = true, features = [
	"runtime-tokio-rustls",
	"sqlite",
], optional = true }
serde.workspace = true
axum_session_auth = { workspace = true, features = ["sqlite-rustls"], optional = true }
async-trait = { workspace = true, optional = true }
cfg-if.workspace = true

[features]
default = []
ssr = [
  "dep:sqlx",
  "dep:axum_session_auth",
  "dep:async-trait",
]
