[package]
name = "brainace_core"
description = "The essential ideas of Brainace"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
fsrs = { git = "https://github.com/open-spaced-repetition/rs-fsrs.git", features = ["serde"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
sqlx = { workspace = true, features = [
	"runtime-tokio-rustls",
	"sqlite",
], optional = true }
axum_session_auth = { workspace = true, features = ["sqlite-rustls"], optional = true }
async-trait = { workspace = true, optional = true }
cfg-if.workspace = true

[features]
default = []
auth = [
  "dep:sqlx",
  "dep:axum_session_auth",
  "dep:async-trait",
]
