[package]
name = "brainace_desktop"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Spaced repetition app for efficient organization and mastery of knowledge"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["tokio", "advanced"] }
tokio = { version = "1.35", features = ["fs", "rt"] }
fsrs = { git = "https://github.com/open-spaced-repetition/rs-fsrs.git", features = ["serde"] }
serde = "1.0"
ron = "0.8"
chrono = "0.4"
rfd = "0.12"
