[package]
name = "brainace_desktop"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Spaced repetition app for efficient organization and mastery of knowledge"

[dependencies]
brainace_core = { version = "0.0.0", path = "../core" }

iced = { git = "https://github.com/iced-rs/iced", features = ["tokio", "advanced", "lazy"] }
tokio = { version = "1.35", features = ["fs", "rt"] }
serde = "1.0"
ron = "0.8"
chrono = "0.4"
rfd = "0.12"
